--- a/app/frontend/styles/application.scss
+++ b/app/frontend/styles/application.scss
@@ -41,6 +41,7 @@ $govuk-image-url-function: frontend-image-url;
 @import 'components/awaiting_feedback_vacancies';
 @import 'components/location_finder';
 @import 'components/loader';
+@import 'components/upload-documents';
 @import 'ie';
 
 input[type='search'] {
